// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render properly 1`] = `
<div
  className=" buttonStyle"
>
  buttonValue
</div>
`;

exports[`<Button /> when glyph className specified should render properly 1`] = `
<div
  className="material-icons buttonStyle className"
>
  buttonValue
</div>
`;
